SSL/Ingress.yml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: krishdev-ingress
  annotations:
    kubernetes.io/ingress.class: gce
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - krishdev.tech
    - www.krishdev.tech
    secretName: krishdev-tech-tls
  rules:
  - host: krishdev.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ClusterIP Service Name      # <--- change it
            port:
              number: 80
